[FIXED] crop use clientxy [ADDED] config [ADDED] getDoc

--- a/src/renderer/style.less
+++ b/src/renderer/style.less
@@ -17,7 +17,7 @@ html {
 	height     : 600px;
 	width      : 400px;
 	overflow   : hidden;
-	font-family: 'source-han-sans-simplified-c', sans-serif;
+	font-family: 'source-han-sans-simplified-c', sans-serif !important;
 }
 
 body {
